quick fix - menu styling on mobile devices

--- a/client/src/app/core/components/nav-bar/nav-bar.component.sass
+++ b/client/src/app/core/components/nav-bar/nav-bar.component.sass
@@ -40,13 +40,14 @@ button
   display: flex
   flex-direction: column
   align-items: center
-  justify-content: center
+  justify-content: flex-start
   position: absolute
   top: 130px
   right: -100vw
   width: 100vw
+  height: 100vh
   padding-bottom: 24px
-  background-color: rgba(33, 33, 33, .3)
+  background-color: rgba(255, 255, 255, .9)
   transition: right .3s
 
 .d-menu.show
@@ -60,7 +61,7 @@ button
     justify-content: space-between
     position: static
     padding-bottom: 0
-    background-color: rgba(33, 33, 33, 0)
+    background-color: rgba(255, 255, 255, 0)
   
   .d-menu.show
     // background-color: rgba(33, 33, 33, 0)
